<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_internet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:visibility="gone">

    <ImageView
        android:id="@+id/iv_nodata"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:src="@drawable/no_data_icon" />

    <TextView
        android:id="@+id/txtNoConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_nodata"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/something_went_wrong"
        android:textAlignment="center"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/txtcheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNoConnection"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/no_internet_connection"
        android:textAlignment="center"
        android:textSize="19sp" />

    <Button
        android:id="@+id/Retrybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtcheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_round_bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:longClickable="true"
        android:text="@string/retry"
        android:textSize="20sp" />
</RelativeLayout>
